2011-08-16  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/mappings/atl/AtlProbenahmen.java:
	  Parameter, die in einer vollständigen Parametergruppe enthalten sind,
	  werden beim Gebührenbescheid mit 0,00 € angezeigt.

2011-04-18  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Kasse.txt wird nun im Encoding 'cp1252' geschrieben.

2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Beim Erstellen eines Gebührenbescheids wird automatisch eine Verfügung
	  erstellt, als PDF gespeichert und ggf mit auf den Drucker geschickt.

	* src/de/bielefeld/umweltamt/aui/utils/PDFExporter.java: Einführung neuer
	  Konstanten, die auf Templates des Gebührenbescheid und der Verfügung
	  zeigen.

2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Wenn die kasse.txt beim Erstellen eines Gebührenbescheides vorhanden
	  ist, wird nun für den aktuellen Bescheid eine neue Zeile eingefügt. Die
	  Daten der kasse.txt bleiben bestehen.

2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* reports/verfuegung.jrxml: Neu. Ein Template für Verfügungen.

2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/utils/GermanDouble.java: Neu. Diese
	  Klasse stellt einen Wrapper um Fließkommazahlen dar. Eine toString()
	  Methode liefert den Wert der Fließkommazahl als String nach deutscher
	  Formatierung mti einem Tausender-Trenner. Diese Klasse wurde
	  hinzugefügt, um die Symmetrie des Programms aufrecht zu erhalten - es
	  gibt bereits eine Klasse KommaDouble, die ebenfalls einen Wrapper um
	  Fließkommazahlen darstellt.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java

	* src/de/bielefeld/umweltamt/aui/mappings/atl/AtlProbenahmen.java: Alle